Loot behavior and misc
Added additional attribution to FlowerChild.
Loose Cobblestone Slab added
Proper loot behavior added, including on explosions and for Silk Touch
Various recipes and lang added

--- a/src/main/resources/assets/mbtw/lang/en_us.json
+++ b/src/main/resources/assets/mbtw/lang/en_us.json
@@ -3,9 +3,19 @@
   "block.mbtw.stone": "Stone",
   "block.mbtw.hard_stone": "Hard Stone",
   "block.mbtw.deep_stone": "Deep Stone",
+  "block.mbtw.coal_ore": "Coal Ore",
+  "block.mbtw.hard_coal_ore": "Hard Coal Ore",
+  "block.mbtw.deep_coal_ore": "Deep Coal Ore",
+  "block.mbtw.iron_ore": "Iron Ore",
+  "block.mbtw.hard_iron_ore": "Hard Iron Ore",
+  "block.mbtw.deep_iron_ore": "Deep Iron Ore",
   "block.mbtw.gravel_slab": "Gravel Slab",
+  "block.mbtw.loose_cobblestone_slab": "Loose Cobblestone Slab",
   "item.mbtw.loose_stone": "Loose Stone",
   "item.mbtw.gravel_pile": "Pile of Gravel",
+  "item.mbtw.iron_ore_pile": "Pile of Iron Ore",
+  "item.mbtw.coal_dust_pile": "Pile of Coal Dust",
+  "item.mbtw.iron_ore_chunk": "Chunk of Iron Ore",
   "item.mbtw.pointy_stick": "Pointy Stick",
   "item.mbtw.chisel_stone": "Sharp Rock"
 }
