Almost done with basic Brick Oven
Added BrickOven and associated BlockEntity, ScreenHandler and Screen as well as RecipeType, RecipeSerializer
In the future, BTW-like model will be added, but will probably keep basic interface
Added recipe for Iron Ore Chunk from pile as well as Brick Oven recipe for nugget from chunk
Fixed some recipes and deep stone loot table

--- a/src/main/resources/assets/mbtw/lang/en_us.json
+++ b/src/main/resources/assets/mbtw/lang/en_us.json
@@ -11,6 +11,8 @@
   "block.mbtw.deep_iron_ore": "Deep Iron Ore",
   "block.mbtw.gravel_slab": "Gravel Slab",
   "block.mbtw.loose_cobblestone_slab": "Loose Cobblestone Slab",
+  "block.mbtw.brick_oven": "Brick Oven",
+  "container.mbtw.brick_oven": "Brick Oven",
   "item.mbtw.loose_stone": "Loose Stone",
   "item.mbtw.gravel_pile": "Pile of Gravel",
   "item.mbtw.iron_ore_pile": "Pile of Iron Ore",
