Mostly finished clay brick baking BlockEntity behavior
Waterlogging still not functioning
Recipes added, also for Brick Oven (4 bricks is now a slab, not a block)

--- a/src/main/resources/assets/mbtw/lang/en_us.json
+++ b/src/main/resources/assets/mbtw/lang/en_us.json
@@ -11,6 +11,7 @@
   "block.mbtw.deep_iron_ore": "Deep Iron Ore",
   "block.mbtw.gravel_slab": "Gravel Slab",
   "block.mbtw.loose_cobblestone_slab": "Loose Cobblestone Slab",
+  "block.mbtw.clay_brick": "Clay Brick",
   "block.mbtw.brick_oven": "Brick Oven",
   "container.mbtw.brick_oven": "Brick Oven",
   "item.mbtw.loose_stone": "Loose Stone",
