Creeper Oyster, multiple output recipes

--- a/src/main/resources/assets/mbtw/lang/en_us.json
+++ b/src/main/resources/assets/mbtw/lang/en_us.json
@@ -35,6 +35,7 @@
   "item.mbtw.crimson_bark": "Crimson Bark",
   "item.mbtw.warped_bark": "Warped Bark",
   "item.mbtw.gravel_pile": "Pile of Gravel",
+  "item.mbtw.creeper_oyster": "Creeper Oyster",
   "item.mbtw.iron_ore_pile": "Pile of Iron Ore",
   "item.mbtw.coal_dust_pile": "Pile of Coal Dust",
   "item.mbtw.iron_ore_chunk": "Chunk of Iron Ore",
