Millstone recipe, flour

--- a/src/main/resources/assets/mbtw/lang/en_us.json
+++ b/src/main/resources/assets/mbtw/lang/en_us.json
@@ -25,7 +25,11 @@
   "block.mbtw.variable_campfire": "Campfire",
   "block.mbtw.finite_torch": "Crude Torch",
   "block.mbtw.finite_wall_torch": "Crude Torch",
+  "block.mbtw.millstone": "Millstone",
+  "block.mbtw.axle": "Axle",
+  "block.mbtw.gearbox": "Gearbox",
   "container.mbtw.brick_oven": "Brick Oven",
+  "container.mbtw.millstone": "Millstone",
   "container.mbtw.trunk_workbench": "Trunk Workbench",
   "item.mbtw.loose_stone": "Loose Stone",
   "item.mbtw.saw_dust": "Saw Dust",
@@ -50,5 +54,6 @@
   "item.mbtw.bow_drill": "Bow Drill",
   "item.mbtw.fire_striker": "Fire Striker",
   "item.mbtw.ash_pile": "Pile of Ash",
-  "item.mbtw.finite_torch": "Crude Torch"
+  "item.mbtw.finite_torch": "Crude Torch",
+  "item.mbtw.flour": "Flour"
 }
